--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: '3.13'
       - name: Install jsonschema
         run: pip install jsonschema==4.6.1
-
+      - name: Install requests
+        run: pip install requests
       - name: Validate JSON files
         run: python schemas/validate.py
